remove /ping
