# backend/docs/swagger.json
@@ -41,32 +41,6 @@
                     }
                 }
             }
-        },
-        "/ping": {
-            "get": {
-                "description": "getPing returns json with message key.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ping"
-                ],
-                "summary": "Get ponged back.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/types.PingResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/types.ErrorResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -109,14 +83,6 @@
                     "type": "string"
                 },
                 "returnTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "types.PingResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
